# FinCoach_BTK_Hackathon_2026

./: .gitignore  .vercelignore  LICENSE  README.md  package-lock.json  pyproject.toml  requirements.txt  vercel.json
.vercel/: project.json
.vercel/output/: builds.json
.vercel/output/diagnostics/: cli_traces.json
.vercel/output/static/frontend/: index.html
.vercel/output/static/frontend/assets/: index-BposVYKg.css  index-TZUXU_M6.js
.vercel/python/: package-manifest.json
api/: index.py
backend/: .env.example  .gitignore  backend_readme.md  entegrasyon_readme.md  requirements.txt
backend/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: ai.py  analytics.py  budgets.py  chat.py  dashboard.py  demo.py  transactions.py  users.py
backend/app/services/: ai_service.py  analytics_service.py  categorizer.py
backend/tests/: test_crud.py
frontend/: .env.example  index.html
frontend/src/: App.jsx  index.css
frontend/src/app/: routes.jsx
frontend/src/components/chat/: Chatbot.jsx
frontend/src/components/layout/: AppLayout.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/context/: DemoContext.jsx  DemoContextValue.js
frontend/src/data/: mockAnalytics.js  mockBudgets.js  mockTransactions.js  mockUser.js
frontend/src/hooks/: useDemo.js
frontend/src/pages/: AuthPage.jsx  BudgetsPage.jsx  DashboardPage.jsx  InsightsPage.jsx  TransactionsPage.jsx
frontend/src/services/: api.js  client.js  config.js  mockApi.js
frontend/src/utils/: buildChatContext.js  formatCurrency.js  formatDate.js
