[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
exclude = []

[project]
name = "fincoach-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.136.1",
  "uvicorn==0.47.0",
  "SQLAlchemy==2.0.49",
  "pydantic==2.13.4",
  "pydantic_core==2.46.4",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.28",
  "openpyxl==3.1.5",
  "email-validator==2.3.0",
  "google-genai>=1.0.0",
  "psycopg2-binary==2.9.9",
  "bcrypt==4.3.0",
  "PyJWT==2.10.1",
  "slowapi==0.1.9",
]
